Fixed styling issues on mobile

--- a/style.css
+++ b/style.css
@@ -36,17 +36,24 @@ body {
   }
 }
 
-@media screen and (max-width: 780px) {
-  .calendar__body {
-    overflow-x: scroll;
-    scroll-behavior: smooth;
-  }
-}
 
 .calendar__table {
   border-collapse: collapse;
+  font-size: 1.4rem;
   min-width: 70rem;
   width: 100%;
+}
+
+@media screen and (max-width: 780px) {
+  .calendar__table {
+    font-size: 1.2rem;
+  }
+
+}
+
+.calendar__body {
+  overflow-x: scroll;
+  scroll-behavior: smooth;
 }
 
 .calendar__table th {
@@ -69,12 +76,12 @@ body {
 }
 
 .calendar__table th {
-  width: 13.57%;
+  min-width: 12rem; 
   padding: 1rem 0;
 }
 
 .calendar__table th:nth-of-type(1) {
-  width: 5%;
+  min-width: 4rem;
 }
 
 
@@ -156,7 +163,6 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  margin: 2px 0 0 2px;
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
@@ -185,7 +191,7 @@ body {
   text-align: center;
   width: 100%;
   color: rgb(199, 199, 199);
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .calendar__800 {
@@ -236,6 +242,16 @@ body {
   text-shadow: .1rem .1rem .3rem rgba(0,0,0,0.4);
 }
 
+@media screen and (max-width: 780px) {
+  .calendar .calendar__holiday {
+    font-size: 2.5rem;
+  }
+
+  .calendar .calendar__day--empty {
+    font-size: 2.5rem;
+  }
+}
+
 .calendar__holiday .calendar__800 {
   border-bottom: none;
 }
@@ -244,7 +260,7 @@ body {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 1000;
   left: 0;
   top: 0;
   width: 100%; 
@@ -270,7 +286,8 @@ body {
   padding: 1rem;
   border: 1px solid #888;
   border-radius: .3rem;
-  width: 20%; /* Could be more or less, depending on screen size */
+  min-width: 500px; /* Could be more or less, depending on screen size */
+  max-width: 40%;
   font-size: 1.8rem;
 }
 
@@ -418,7 +435,6 @@ body {
 .summary-table tr.summary-table__row--highlight {
   background-color: #ffa600;
   transition: all .3s;
-  box-shadow: inset 0 1rem 2rem rgba(0,0,0,0.2);
   border: none;
 }
 
@@ -428,9 +444,37 @@ body {
   visibility: hidden;
 }
 
+@media screen and (max-width: 1000px) {
+  .calendar__table {
+    font-size: 1.2rem;
+  }
+
+  .calendar__daynumber {
+    display: none;
+  }
+
+  /* .calendar__personholiday {
+    display: none;
+  } */
+
+  .highlight {
+    padding: .1rem .5rem;
+    box-shadow: 0 1rem 2rem rgba(0,0,0,0.2);
+    transform: none;
+  }
+}
+
 @media screen and (max-width: 500px) {
   body {
     font-size: 1.3rem;
+  }
+
+  #calendar__body > table tr > td:first-child,
+  #calendar__body > table tr > th:first-child {
+    position: sticky;
+    outline: 1px solid #000;
+    left: 0;
+    z-index: 500;
   }
 
   .btn {
@@ -442,7 +486,7 @@ body {
   }
 
   .modal__content {
-    width: 100%;
+    min-width: 100%;
     position: absolute;
     top: 30%;
     left: 50%;
@@ -461,11 +505,6 @@ body {
   .btn--reset,
   .btn--start {
     width: 50%;
-  }
-
-  .highlight {
-    padding: .1rem .5rem;
-    box-shadow: 0 1rem 2rem rgba(0,0,0,0.2);
   }
 
   .calendar__table th {
